add fonts and icons

--- a/src/assets/styles/main/_variables.scss
+++ b/src/assets/styles/main/_variables.scss
@@ -4,7 +4,9 @@
 
 // Typography
 $system-fonts: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-$font: 'Poppins', sans-serif;
+
+$font: 'futuramedium';
+$font-bold: 'futurabold';
 
 // Colors
 $black: #1E1D1C;
