--- a/src/assets/styles/main/main.scss
+++ b/src/assets/styles/main/main.scss
@@ -7,6 +7,7 @@
 
   @import 'components/forms';
   @import 'components/buttons';
+  @import 'components/layout';
 
   @import 'components/hero';
   @import 'components/works';
