right icons with color hover

--- a/src/assets/styles/main/_variables.scss
+++ b/src/assets/styles/main/_variables.scss
@@ -5,13 +5,12 @@
 // Typography
 $system-fonts: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 
-$font: 'futuramedium';
-$font-bold: 'futurabold';
+$font: 'futura_md_btmedium';
+$font-bold: 'futura_ltbold';
 
 // Colors
-$black: #1E1D1C;
+$black: black;
 $white: white;
-$yellow: #F9DE35;
 
 // Breakpoints
 $breakpoints: (
