--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -4,6 +4,7 @@
 
 html {
   min-height: 100%;
+  height: 100%;
   position: relative;
   font-family: $font;
   -webkit-font-smoothing: antialiased;
@@ -13,8 +14,19 @@ html {
 body {
   font: inherit;
   line-height: inherit;
+  height: 100%;
 }
 
 img {
   max-width: 100%;
+}
+
+
+a {
+  color: $black;
+}
+
+::selection {
+  background-color: $black;
+  color: $white;
 }
