--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -2,12 +2,12 @@ section.hero
   .container
     h1 Hi, I’m Juan
     p I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.
-    p Besides my passion for design and coding, I love and spend a lot of time travelling and taking photos. Feel free to visit my Unsplash page.
+    p Besides my passion for design and coding, I love and spend a lot of time travelling and taking photos. Feel free to visit my #[a(href="https://unsplash.com/@juandinella", title="", target="_blank") Unsplash page].
     p My main focus nowadays is emotional design, web animation, and accessibility. 
     p And don’t forget to stalk me on:
     ul
-      li: a(href="", title="") tw
-      li: a(href="", title="") fb
-      li: a(href="", title="") ig
-      li: a(href="", title="") in
-      li: a(href="", title="") gh
+      li.tw: a(href="", title="", target="_blank"): +svg('twitter')
+      li.fb: a(href="", title="", target="_blank"): +svg('facebook')
+      li.ig: a(href="", title="", target="_blank"): +svg('instagram')
+      li.in: a(href="", title="", target="_blank"): +svg('linkedin')
+      li.gh: a(href="", title="", target="_blank"): +svg('github')
