--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,3 +2,6 @@ extends layouts/layout-primary
 
 block content
   include layouts/general/hero
+  include layouts/general/soy-solo
+  include layouts/general/neolo
+  include layouts/general/doncupones
