--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -11,3 +11,5 @@ section.hero
       li.ig: a(href="", title="", target="_blank"): +svg('instagram')
       li.in: a(href="", title="", target="_blank"): +svg('linkedin')
       li.gh: a(href="", title="", target="_blank"): +svg('github')
+    a.scroll(href="", title="")
+      +svg('chevron-down')
