compress images and improve font load

--- a/src/assets/styles/main/_variables.scss
+++ b/src/assets/styles/main/_variables.scss
@@ -4,9 +4,8 @@
 
 // Typography
 $system-fonts: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$font: 'futura';
 
-$font: 'futura_md_btmedium';
-$font-bold: 'futura_ltbold';
 
 // Colors
 $black: black;
