--- a/src/assets/styles/main/components/_works.scss
+++ b/src/assets/styles/main/components/_works.scss
@@ -38,7 +38,7 @@
 
     h2 {
       font-size: rem(80);
-      font-family: $font-bold;
+      font-weight: 700;
       margin-bottom: rem(10);
     }
 
