--- a/src/assets/styles/fonts/fonts.scss
+++ b/src/assets/styles/fonts/fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
-  font-family: 'futura_md_btmedium';
+  font-family: 'futura';
   src: url('../fonts/futurabt-medium-webfont.woff2') format('woff2'),
   url('../fonts/futurabt-medium-webfont.woff') format('woff');
-  font-weight: normal;
   font-style: normal;
+  font-weight: 500;
 }
 
 @font-face {
-  font-family: 'futura_ltbold';
+  font-family: 'futura';
   src: url('../fonts/futuralt-bold-webfont.woff2') format('woff2'),
   url('../fonts/futuralt-bold-webfont.woff') format('woff');
-  font-weight: normal;
   font-style: normal;
+  font-weight: 700;
 }
