--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -9,7 +9,7 @@
   }
 
   h1 {
-    font-family: $font-bold;
+    font-weight: 700;
     font-size: rem(100);
     margin-bottom: rem(14);
   }
@@ -75,7 +75,7 @@
 
 .scroll {
   position: absolute;
-  bottom: 4%;
+  bottom: 2%;
   left: 0;
   right: 0;
   margin: 0 auto;
