--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -10,14 +10,23 @@
 
   h1 {
     font-weight: 700;
-    font-size: rem(100);
+    font-size: rem(60);
     margin-bottom: rem(14);
+    line-height: 1;
+    @include breakpoint(md) {
+      font-size: rem(100);
+    }
   }
 
   p {
-    font-size: rem(18);
+    font-size: rem(16);
     line-height: 1.5;
-    margin-bottom: rem(30);
+    margin-bottom: rem(20);
+
+    @include breakpoint(md) {
+      font-size: rem(18);
+      margin-bottom: rem(30);
+    }
   }
 
   ul {
@@ -79,7 +88,11 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-  display: block;
+  display: none;
   width: rem(34);
   text-align: center;
+
+  @include breakpoint(md) {
+    display: block;
+  }
 }
