--- a/src/assets/styles/main/components/_works.scss
+++ b/src/assets/styles/main/components/_works.scss
@@ -1,8 +1,13 @@
 .work {
   position: relative;
-  padding: rem(130) 0;
+  padding: rem(60) 0;
   margin: rem(20) 0;
-  height: rem(1200);
+  height: auto;
+
+  @include breakpoint(md) {
+    height: rem(1200);
+    padding: rem(130) 0;
+  }
 
   &:before {
     content: '';
@@ -11,18 +16,26 @@
     left: 0;
     right: 0;
     margin: 0 auto;
-    width: rem(360);
+    width: rem(240);
     height: rem(2);
     background-color: $black;
+
+    @include breakpoint(md) {
+      width: rem(360);
+    }
   }
 
   &--img {
     img {
-      max-width: rem(1279);
+      max-width: 100%;
       filter: gray;
       -webkit-filter: grayscale(1);
       -webkit-transition: all .2s ease-in-out;
       vertical-align: text-bottom;
+
+      @include breakpoint(md) {
+        max-width: rem(1280);
+      }
     }
 
     &:hover {
@@ -34,17 +47,31 @@
   }
 
   &--text {
-    max-width: rem(460);
+    max-width: 100%;
+    margin-bottom: rem(30);
+
+    @include breakpoint(md) {
+      max-width: rem(460);
+      margin-bottom: 0;
+    }
 
     h2 {
-      font-size: rem(80);
+      font-size: rem(50);
       font-weight: 700;
       margin-bottom: rem(10);
+      line-height: 1;
+      @include breakpoint(md) {
+        font-size: rem(80);
+      }
     }
 
     p {
-      font-size: rem(18);
+      font-size: rem(16);
       line-height: 1.66;
+
+      @include breakpoint(md) {
+        font-size: rem(18);
+      }
     }
 
     &__about {
@@ -69,7 +96,11 @@
 
   &--even {
     .container {
-      padding-left: rem(60);
+      padding: 0 rem(20);
+
+      @include breakpoint(md) {
+        padding: 0 0 0 rem(60);
+      }
     }
 
     .edge {
@@ -79,7 +110,11 @@
 
   &--odd {
     .container {
-      padding-right: rem(60);
+      padding: 0 rem(20);
+
+      @include breakpoint(md) {
+        padding: 0 rem(60) 0 0 ;
+      }
     }
 
     .edge {
@@ -92,12 +127,21 @@
 
     .work--img {
       position: relative;
-      width: rem(1280);
-      height: rem(950);
+      width: 100%;
+      height: 100%;
+
+      @include breakpoint(md) {
+        width: rem(1280);
+        height: rem(950);
+      }
 
       img {
-        position: absolute;
+        position: static;
         right: 0;
+
+        @include breakpoint(md) {
+          position: absolute;
+        }
       }
     }
   }
@@ -105,13 +149,22 @@
 
 .edge {
   display: flex;
-  position: absolute;
+  position: static;
   overflow: hidden;
   padding: 0;
   box-shadow: 0 0 50px 0 rgba(0,0,0,0.30);
+
+  @include breakpoint(md) {
+    position: absolute;
+  }
 }
 
 
 .mla {
   margin-left: auto;
+  order: -1;
+
+  @include breakpoint(md) {
+    order: 1;
+  }
 }
