update social links

--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -6,10 +6,10 @@ section.hero
     p My main focus nowadays is emotional design, web animation, and accessibility. 
     p And don’t forget to stalk me on:
     ul
-      li.tw: a(href="", title="", target="_blank"): +svg('twitter')
-      li.fb: a(href="", title="", target="_blank"): +svg('facebook')
-      li.ig: a(href="", title="", target="_blank"): +svg('instagram')
-      li.in: a(href="", title="", target="_blank"): +svg('linkedin')
-      li.gh: a(href="", title="", target="_blank"): +svg('github')
+      li.tw: a(href="https://www.twitter.com/orugacontenta", title="", target="_blank"): +svg('twitter')
+      li.fb: a(href="https://www.facebook.com/tuvieja", title="", target="_blank"): +svg('facebook')
+      li.ig: a(href="https://www.instagram.com/juandinella/", title="", target="_blank"): +svg('instagram')
+      li.in: a(href="https://www.linkedin.com/in/juandinella/", title="", target="_blank"): +svg('linkedin')
+      li.gh: a(href="https://github.com/juandinella", title="", target="_blank"): +svg('github')
     a.scroll(href="", title="")
       +svg('chevron-down')
