add scroll button

--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -11,5 +11,6 @@ section.hero
       li.ig: a(href="https://www.instagram.com/juandinella/", title="", target="_blank"): +svg('instagram')
       li.in: a(href="https://www.linkedin.com/in/juandinella/", title="", target="_blank"): +svg('linkedin')
       li.gh: a(href="https://github.com/juandinella", title="", target="_blank"): +svg('github')
-    a.scroll(href="", title="")
+    //- a.scroll#scroll(href="", title="")
+    button#scroll.scroll
       +svg('chevron-down')
