--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,7 @@ extends layouts/layout-primary
 
 block content
   include layouts/general/hero
-  include layouts/general/soy-solo
-  include layouts/general/neolo
-  include layouts/general/doncupones
+  section#works
+    include layouts/general/soy-solo
+    include layouts/general/neolo
+    include layouts/general/doncupones
