--- a/src/pug/layouts/layout-primary.pug
+++ b/src/pug/layouts/layout-primary.pug
@@ -2,14 +2,14 @@ doctype html
 html(lang='en')
   head
     block title
-      title portfolio
+      title Juan Di Nella - Web designer and frontend developer 
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name='description' content='portfolio - Scaffolded with Pixel2HTML Frontend Generator')
-    meta(name='theme-color', content='#3e456c')
+    meta(name='theme-color', content='#000000')
     link(rel='manifest' href='assets/head/manifest.json')
-    link(rel="shortcut icon" href="assets/head/favico.ico")
+    link(rel="shortcut icon" href="assets/head/favicon.ico")
     link(rel="icon" type="image/png" href="assets/head/favicon.png")
     if production
       link(rel='stylesheet', href='assets/css/vendor.min.css')
