--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -3,7 +3,7 @@ section.work.work--odd
     .row
       .col-md-6.edge
         .work--img
-          img(src='assets/images/neolo.jpg', srcset='assets/images/neolo.jpg 1x, assets/images/neolo@2x.jpg 2x', alt='Leo Piccioli')
+          img(src='assets/images/neolo.jpg', srcset='assets/images/neolo.jpg 1x, assets/images/neolo@2x.jpg 2x', alt="Neolo's website screenshot")
       .col-md-6.mla
         .work--text
           h2 Neolo
