--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -34,3 +34,15 @@ a {
   background-color: $black;
   color: $white;
 }
+
+
+.visuallyHidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
