--- a/src/pug/layouts/includes/mixins.pug
+++ b/src/pug/layouts/includes/mixins.pug
@@ -9,5 +9,5 @@ mixin h(htmlElement, module)
 mixin svg(filename)
   !=icon(filename)
 
-mixin img(name, module, alt)
-  img(src=`assets/images/${name}` css-module=module alt= alt ? alt : 'An image')
+mixin img(name, alt)
+  img(src=`assets/images/${name}` alt= alt ? alt : 'An image')
