update blurry images

--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -24,6 +24,15 @@ body {
 
 img {
   max-width: 100%;
+  transition: .2s;
+
+  &.lazyload {
+    filter: blur(2px);
+  }
+
+  &.lazyloaded {
+    filter: blur(0);
+  }
 }
 
 
