test font loading

--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -16,7 +16,7 @@
   }
 
   h1 {
-    font-weight: 700;
+    /* font-weight: 700; */
     font-size: rem(60);
     margin-bottom: rem(14);
     line-height: 1;
