added alt text to imgs

--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -3,8 +3,7 @@ section.work.work--odd
     .row
       .col-md-6.edge
         .work--img
-          +img('neolo@2x.jpg')
-          //- img(src='assets/images/neolo.jpg', srcset='assets/images/neolo.jpg 1x, assets/images/neolo@2x.jpg 2x', alt="Neolo's website screenshot")
+          +img('neolo@2x.jpg', "Neolo's website screenshot")
       .col-md-6.mla
         .work--text
           h2 Neolo
