another test SW

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,5 +4,5 @@ block content
   include layouts/general/hero
   section#works
     include layouts/general/soy-solo
-    include layouts/general/neolo
-    include layouts/general/doncupones
+    //- include layouts/general/neolo
+    //- include layouts/general/doncupones
