--- a/src/pug/layouts/general/soy-solo.pug
+++ b/src/pug/layouts/general/soy-solo.pug
@@ -5,9 +5,12 @@ section.work.work--even
         .work--text
           h2 Soy Solo
           .work--text__about
-            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            p Soy solo is a book about honest stories of leadership to be happy in the 21st century and beyond by Leo Piccioli.
           .work--text__description
-            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            p Leo requested me to create a landing page for his new brand book, “Soy solo”. He wanted a simple, clean and fast website and I was responsible for the design and the frontend
+            a(href="http://soy-solo.netlify.com/", title="Soy solo's website", target="_blank", rel="noopener")
+              span Visit the website
+              +svg('arrow-right')
       .col-md-6.edge
         .work--img
-          +img('soy-solo.jpg', 'soy-solo@2x.jpg', "Soy Solo's website screenshot")
+          +img('soy-solo.jpg', "Soy Solo's website screenshot")
