--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -11,6 +11,7 @@ section.hero
       li.ig: a(href="https://www.instagram.com/juandinella/", title="Juan Di Nella's instagram account", target="_blank", rel="noopener"): +svg('instagram')
       li.in: a(href="https://www.linkedin.com/in/juandinella/", title="Juan Di Nella's linkedin account", target="_blank", rel="noopener"): +svg('linkedin')
       li.gh: a(href="https://github.com/juandinella", title="Juan Di Nella's github account", target="_blank", rel="noopener"): +svg('github')
+    a.contact(href="mailto:juan.dinella@gmail.com", title="Drop me a line") Contact me
     button#scroll.scroll
       span.visuallyHidden Scroll down to see my work
       +svg('chevron-down')
