change ::selection color

--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -67,8 +67,9 @@ a {
 }
 
 ::selection {
-  background-color: $black;
+  background-color: rgba($black,0.99);
   color: $white;
+  opacity: 1;
 }
 
 
