--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -1,3 +1,15 @@
+#magic {
+  margin-top: 15px;
+}
+
+#canvas {
+  display: none;
+
+  &.is-visible {
+    display: block;
+  }
+}
+
 .hero {
   height: auto;
   display: flex;
@@ -7,6 +19,19 @@
   @include breakpoint(md) {
     height: 100%;
     padding: 0;
+  }
+
+  &--content {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    padding: rem(30) 0;
+
+    @include breakpoint(md) {
+      height: 100%;
+      padding: 0;
+    }
   }
 
   .container {
