--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -1,17 +1,20 @@
 section.hero
-  .container
-    h1 Hi, I’m Juan
-    p I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.
-    p Besides my passion for design and coding, I love and spend a lot of time travelling and taking photos. Feel free to visit my #[a(href="https://unsplash.com/@juandinella", title="Juan Di Nella's unsplash page", target="_blank", rel="noopener") Unsplash page].
-    p My main focus nowadays is emotional design, web animation, and accessibility. 
-    p And don’t forget to stalk me on:
-    ul
-      li.tw: a(href="https://www.twitter.com/orugacontenta", title="Juan Di Nella's twitter account", target="_blank", rel="noopener"): +svg('twitter')
-      li.fb: a(href="https://www.facebook.com/tuvieja", title="Juan Di Nella's facebook account", target="_blank", rel="noopener"): +svg('facebook')
-      li.ig: a(href="https://www.instagram.com/juandinella/", title="Juan Di Nella's instagram account", target="_blank", rel="noopener"): +svg('instagram')
-      li.in: a(href="https://www.linkedin.com/in/juandinella/", title="Juan Di Nella's linkedin account", target="_blank", rel="noopener"): +svg('linkedin')
-      li.gh: a(href="https://github.com/juandinella", title="Juan Di Nella's github account", target="_blank", rel="noopener"): +svg('github')
-    a.contact(href="mailto:juan.dinella@gmail.com", title="Drop me a line") Contact me
-    button#scroll.scroll
-      span.visuallyHidden Scroll down to see my work
-      +svg('chevron-down')
+  canvas#canvas
+  .hero--content
+    .container
+      h1 Hi, I’m Juan
+      p I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.
+      p Besides my passion for design and coding, I love and spend a lot of time travelling and taking photos. Feel free to visit my #[a(href="https://unsplash.com/@juandinella", title="Juan Di Nella's unsplash page", target="_blank", rel="noopener") Unsplash page].
+      p My main focus nowadays is emotional design, web animation, and accessibility. 
+      p And don’t forget to stalk me on:
+      ul
+        li.tw: a(href="https://www.twitter.com/orugacontenta", title="Juan Di Nella's twitter account", target="_blank", rel="noopener"): +svg('twitter')
+        li.fb: a(href="https://www.facebook.com/tuvieja", title="Juan Di Nella's facebook account", target="_blank", rel="noopener"): +svg('facebook')
+        li.ig: a(href="https://www.instagram.com/juandinella/", title="Juan Di Nella's instagram account", target="_blank", rel="noopener"): +svg('instagram')
+        li.in: a(href="https://www.linkedin.com/in/juandinella/", title="Juan Di Nella's linkedin account", target="_blank", rel="noopener"): +svg('linkedin')
+        li.gh: a(href="https://github.com/juandinella", title="Juan Di Nella's github account", target="_blank", rel="noopener"): +svg('github')
+      a.contact(href="mailto:juan.dinella@gmail.com", title="Drop me a line") Contact me
+      div#magic Magic - do not touch
+      button#scroll.scroll
+        span.visuallyHidden Scroll down to see my work
+        +svg('chevron-down')
