--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,7 @@
 extends layouts/layout-primary
 
 block content
+  //- canvas#canvas
   include layouts/general/hero
   section#works
     include layouts/general/soy-solo
