--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -5,9 +5,12 @@ section.work.work--even
         .work--text
           h2 Doncupones
           .work--text__about
-            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            p DonCupones was one of the most important discount coupons website for online stores in Spain with 5 years, 900 virtual stores and more than 5000 active coupons. In 2018 was acquired by 20minutoes
           .work--text__description
-            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            p I’ve been working in DonCupones for the past 4 years as a lead designer and frontend developer until 2017 keeping the site with the latest trends and new technologies.
+            a(href="https://www.doncupones.com.mx/", title="DonCupones's website", target="_blank", rel="noopener")
+              span Visit the website
+              +svg('arrow-right')
       .col-md-6.edge
         .work--img
-          +img('doncupones@2x.jpg', "Doncupones's website screenshot")
+          +img('dc.jpg', "Doncupones's website screenshot")
