--- a/src/pug/layouts/general/hero.pug
+++ b/src/pug/layouts/general/hero.pug
@@ -1,5 +1,4 @@
 section.hero
-  canvas#canvas
   .hero--content
     .container
       h1 Hi, I’m Juan
@@ -14,7 +13,7 @@ section.hero
         li.in: a(href="https://www.linkedin.com/in/juandinella/", title="Juan Di Nella's linkedin account", target="_blank", rel="noopener"): +svg('linkedin')
         li.gh: a(href="https://github.com/juandinella", title="Juan Di Nella's github account", target="_blank", rel="noopener"): +svg('github')
       a.contact(href="mailto:juan.dinella@gmail.com", title="Drop me a line") Contact me
-      div#magic Magic - do not touch
+      //- div#magic Magic - do not touch
       button#scroll.scroll
         span.visuallyHidden Scroll down to see my work
         +svg('chevron-down')
