--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -8,9 +8,11 @@ section.work.work--odd
         .work--text
           h2 Neolo
           .work--text__about
-            p Neolo.com is one of the most important web hosting company in Latin America with more than 80.000 web sites and 14 years of experience
+            p Neolo.com is one of the most important web hosting company in Latin America with more than 80.000 web sites and 14 years of experience.
           .work--text__description
-            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            p Since Neolo is in constant evolution and growing, Its website needed to be able to adapt their necessities and be responsive to that. My role in this project was to redesign the complete experience, create a new UI and develop the frontend.
+            p My main approach for this job was to focus on emotional design and create reusable blocks that could work in the different pages.
+
             a(href="https://www.neolo.com/argentina/", title="", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
