--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -5,9 +5,9 @@ section.work.work--even
         .work--text
           h2 Doncupones
           .work--text__about
-            p DonCupones was one of the most important discount coupons website for online stores in Spain with 5 years, 900 virtual stores and more than 5000 active coupons. In 2018 was acquired by 20minutoes
+            p DonCupones was one of the most important discount coupons website for online stores in Spain with 5 years, 900 virtual stores and more than 5000 active coupons. In 2018 was acquired by 20minuto.es.
           .work--text__description
-            p I’ve been working in DonCupones for the past 4 years as a lead designer and frontend developer until 2017 keeping the site with the latest trends and new technologies.
+            p I’ve been working in DonCupones for the past 4 years as a lead designer and frontend developer until 2017 keeping the site with the latest trends and new technologies. I did not design or develop the new site but this image is the latest design i've made
             a(href="https://www.doncupones.com.mx/", title="DonCupones's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
