--- a/src/pug/layouts/layout-primary.pug
+++ b/src/pug/layouts/layout-primary.pug
@@ -30,4 +30,9 @@ html(lang='en')
 
     script(src='assets/js/main.js' async)
     block scripts
-      //- Also if more scripts are needed you can hook in here <3
+      script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-117932805-1')
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-117932805-1');
