--- a/src/assets/styles/main/components/_works.scss
+++ b/src/assets/styles/main/components/_works.scss
@@ -75,6 +75,10 @@
       @include breakpoint(md) {
         font-size: rem(18);
       }
+
+      em {
+        font-style: italic;
+      }
     }
 
     a {
