--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -3,11 +3,11 @@ section.work.work--even
     .row
       .col-md-6
         .work--text
-          h2 Doncupones
+          h2 DonCupones
           .work--text__about
-            p DonCupones was one of the most important discount coupons website for online stores in Spain with 5 years, 900 virtual stores and more than 5000 active coupons. In 2018 was acquired by 20minuto.es.
+            p DonCupones was one of the most important discount coupons website for online stores in Spain for 5 years, with 900 virtual stores and more than 5,000 active coupons. In 2018 it was acquired by 20minuto.es.
           .work--text__description
-            p I’ve been working in DonCupones for the past 4 years as a lead designer and frontend developer until 2017 keeping the site with the latest trends and new technologies. I did not design or develop the new site but this image is the latest design i've made
+            p I worked on DonCupones for the past 4 years as a lead designer and frontend developer keeping the site up with the latest trends and new technologies. I did not design or develop the new website, but this image is the last design I made.
             a(href="https://www.doncupones.com.mx/", title="DonCupones's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
