--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -8,10 +8,10 @@ section.work.work--odd
         .work--text
           h2 Neolo
           .work--text__about
-            p Neolo.com is one of the most important web hosting company in Latin America with more than 80.000 web sites and 14 years of experience.
+            p Neolo is one of the most important web hosting company in Latin America with more than 80,000 websites and 14 years of experience.
           .work--text__description
-            p Since Neolo is in constant evolution and growing, Its website needed to be able to adapt their necessities and be responsive to that. My role in this project was to redesign the complete experience, create a new UI and develop the frontend.
-            p My main approach for this job was to focus on emotional design and create reusable blocks that could work in the different pages.
+            p Since Neolo is constantly growing and expanding, its website needed to be able to adapt to their necessities and be responsive to that. My role in this project was to redesign the complete experience, create a new UI and develop the frontend.
+            p For this job I tried to focus mainly on emotional design and create reusable blocks that could work for the different pages.
 
             a(href="https://www.neolo.com/argentina/", title="", target="_blank", rel="noopener")
               span Visit the website
