--- a/src/pug/layouts/general/soy-solo.pug
+++ b/src/pug/layouts/general/soy-solo.pug
@@ -5,9 +5,9 @@ section.work.work--even
         .work--text
           h2 Soy Solo
           .work--text__about
-            p Soy solo is a book about honest stories of leadership to be happy in the 21st century and beyond by Leo Piccioli.
+            p #[em Soy solo] is a book of honest stories about leadership to be happy in the 21st century and beyond by Leo Piccioli.
           .work--text__description
-            p Leo requested me to create a landing page for his new brand book, “Soy solo”. He wanted a simple, clean and fast website and I was responsible for the design and the frontend
+            p Leo requested me to create a landing page for his brand new book, #[em Soy solo]. He wanted a simple, clean, fast website and I designed and frontended one for him.
             a(href="http://soy-solo.netlify.com/", title="Soy solo's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
