--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -36,15 +36,24 @@
   }
 
   .container {
-    max-width: rem(706);
-    padding: 0 rem(30);
+    max-width: 100%;
+    padding: 0 rem(20);
     margin-top: rem(-10);
+
+    @include breakpoint(md) {
+      padding: 0 rem(30);
+      max-width: rem(706);
+    }
   }
 
   h1 {
-    font-size: rem(60);
+    font-size: rem(52);
     margin-bottom: rem(14);
     line-height: 1;
+
+    @include breakpoint(sm) {
+      font-size: rem(60);
+    }
 
     @include breakpoint(md) {
       font-size: rem(100);
@@ -140,6 +149,12 @@
   padding: rem(12) rem(70);
   transition: all 0.225s ease;
   font-size: rem(18);
+  text-align: center;
+  width: 100%;
+
+  @include breakpoint(sm) {
+    width: auto;
+  }
 
   &:hover {
     color: $black;
