--- a/src/assets/styles/main/components/_pixel.scss
+++ b/src/assets/styles/main/components/_pixel.scss
@@ -2,7 +2,12 @@
   &--pixel {
     margin-top: rem(60);
     border-bottom: rem(2) solid $black;
+
     @include breakpoint(md) {
+      margin-top: rem(100);
+    }
+
+    @include breakpoint(lg) {
       margin-top: rem(140);
     }
   }
