--- a/src/assets/styles/main/main.scss
+++ b/src/assets/styles/main/main.scss
@@ -13,4 +13,8 @@
   @import 'components/hero';
   @import 'components/works';
   @import 'components/pixel';
+
+  @import 'components/footer';
+
+  @import 'components/canvas';
 }
