--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,10 @@
 extends layouts/layout-primary
 
 block content
-  //- canvas#canvas
+  canvas#canvas
+
   include layouts/general/hero
+
   section#works
     include layouts/general/soy-solo
     include layouts/general/neolo
