--- a/src/pug/layouts/general/footer.pug
+++ b/src/pug/layouts/general/footer.pug
@@ -1,1 +1,6 @@
-//- Replace this with the footer
+footer.mainFooter
+  .container
+    .row
+      .col-md-12
+        #magic
+          p Magic - do not touch
