--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -3,7 +3,7 @@ section.work.work--odd
     .row
       .col-md-6.edge
         .work--img
-          +img('neolo@2x.jpg', "Neolo's website screenshot")
+          +img('neolo.jpg', "Neolo's website screenshot")
       .col-md-6.mla
         .work--text
           h2 Neolo
