--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -8,7 +8,7 @@ section.work.work--center
           
   .container-fluid.work--pixel
     .row
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -21,7 +21,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -34,7 +34,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -47,7 +47,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -62,7 +62,7 @@ section.work.work--center
                 span view site
 
     .row
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -75,7 +75,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -88,7 +88,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
@@ -101,7 +101,7 @@ section.work.work--center
                   li #CSS
                   li #JS
                 span view site
-      .col-xs-6.col-sm-3
+      .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
