--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -3,8 +3,8 @@
 }
 
 html {
-  min-height: 100%;
-  height: 100%;
+  /* min-height: 100%;
+  height: 100%; */
   position: relative;
   font-family: $system-fonts;
   -webkit-font-smoothing: antialiased;
@@ -44,8 +44,9 @@ html {
 body {
   font: inherit;
   line-height: inherit;
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
+  position: relative;
 }
 
 img {
@@ -70,6 +71,7 @@ a {
   background-color: rgba($black,0.99);
   color: $white;
   opacity: 1;
+
 }
 
 
