--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -7,10 +7,10 @@ section.work.work--even
           .work--text__about
             p DonCupones was one of the most important discount coupons website for online stores in Spain for 5 years, with 900 virtual stores and more than 5,000 active coupons. In 2018 it was acquired by 20minuto.es.
           .work--text__description
-            p I worked on DonCupones for the past 4 years as a lead designer and frontend developer keeping the site up with the latest trends and new technologies. I did not design or develop the new website, but this image is the last design I made.
+            p I worked on DonCupones for the past 4 years as a lead designer and frontend developer keeping the site up with the latest trends and technologies. I did not design or develop the new website, but this image is the last design I made.
             a(href="https://www.doncupones.com.mx/", title="DonCupones's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
       .col-md-6.edge
         .work--img
-          +img('dc.jpg', "Doncupones's website screenshot")
+          +img('doncupones.jpg', "Doncupones's website screenshot")
