particles behind images

--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -12,5 +12,5 @@ section.work.work--even
               span Visit the website
               +svg('arrow-right')
       .col-md-6.edge
-        .work--img
+        .work--img.hz
           +img('doncupones.jpg', "Doncupones's website screenshot")
