--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -2,7 +2,7 @@ section.work.work--odd
   .container
     .row
       .col-md-6.edge
-        .work--img
+        .work--img.hz
           +img('neolo.jpg', "Neolo's website screenshot")
       .col-md-6.mla
         .work--text
