--- a/src/pug/layouts/general/soy-solo.pug
+++ b/src/pug/layouts/general/soy-solo.pug
@@ -12,5 +12,5 @@ section.work.work--even
               span Visit the website
               +svg('arrow-right')
       .col-md-6.edge
-        .work--img
+        .work--img.hz
           +img('soy-solo.jpg', "Soy Solo's website screenshot")
