--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -27,6 +27,10 @@
     max-width: 100%;
     padding: 0 rem(20);
     margin-top: rem(-10);
+    z-index: 2;
+    position: relative;
+    background-color: rgba($white, 0.5);
+    box-shadow: 1px 2px 3px rgba($white,.5);
 
     @include breakpoint(md) {
       padding: 0 rem(30);
@@ -120,6 +124,7 @@
   display: none;
   width: rem(34);
   text-align: center;
+  z-index: 1;
 
   @include breakpoint(md) {
     display: block;
