test new colors

--- a/src/assets/styles/main/_variables.scss
+++ b/src/assets/styles/main/_variables.scss
@@ -10,6 +10,10 @@ $font: 'futura';
 // Colors
 $black: black;
 $white: white;
+$red: #CE4841;
+$yellow: #F6AA3D;
+$light-blue: #74C0C0;
+
 
 // Breakpoints
 $breakpoints: (
