--- a/src/pug/layouts/general/footer.pug
+++ b/src/pug/layouts/general/footer.pug
@@ -3,4 +3,4 @@ footer.mainFooter
     .row
       .col-md-12
         #magic
-          p Magic - do not touch
+          h4 Can someone turn on the light?
